@@ -1,5 +1,8 @@
 Revision history for Module::Provision
 
+          - Added select_project
+          - Added ::Config::test_env_vars
+
 0.25.1    2013-11-23 13:35:51
           - Dropped dependency on MooX::Options
           - Made ensure_class_loaded into a function
